fixed government tier icons not showing up correctly

--- a/src/main/webapp/bundles/health_v4/less/results/results.less
+++ b/src/main/webapp/bundles/health_v4/less/results/results.less
@@ -296,81 +296,79 @@
     .results-header-classification {
       margin: 15px 0px;
 
-  .results-header-classification-icon {
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100px;
-
-    @media (@sm) {
-     height: 60px;
-    }
-
-    &.gov-unclassified {
-      background-image: url('/ctm/assets/graphics/health_classification/unclassified_govclass_mobile.svg');
-
-      @media (@sm) {
-        background-image: url('/ctm/assets/graphics/health_classification/unclassified_govclass.svg');
+      .results-header-classification-icon {
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 100px;
+    
+        @media (@sm) {
+          height: 60px;
+        }
+    
+        &.gov-unclassified {
+          background-image: url('../../../../assets/graphics/health_classification/unclassified_govclass_mobile.svg');
+    
+          @media (@sm) {
+            background-image: url('../../../../assets/graphics/health_classification/unclassified_govclass.svg');
+          }
+        }
+    
+        &.gov-bronze-plus {
+          background-image: url('../../../../assets/graphics/health_classification/Bronzeplus_govclass_mobile.svg');
+    
+          @media (@sm) {
+            background-image: url('../../../../assets/graphics/health_classification/Bronzeplus_govclass.svg');
+          }
+        }
+    
+        &.gov-bronze {
+          background-image: url('../../../../assets/graphics/health_classification/Bronze_govclass_mobile.svg');
+    
+          @media (@sm) {
+            background-image: url('../../../../assets/graphics/health_classification/Bronze_govclass.svg');
+          }
+        }
+    
+        &.gov-silver-plus {
+          background-image: url('../../../../assets/graphics/health_classification/Silverplus_govclass_mobile.svg');
+    
+          @media (@sm) {
+            background-image: url('../../../../assets/graphics/health_classification/Silverplus_govclass.svg');
+          }
+        }
+    
+        &.gov-silver {
+          background-image: url('../../../../assets/graphics/health_classification/Silver_govclass_mobile.svg');
+    
+          @media (@sm) {
+            background-image: url('../../../../assets/graphics/health_classification/Silver_govclass.svg');
+          }
+        }
+    
+        &.gov-gold {
+          background-image: url('../../../../assets/graphics/health_classification/Gold_govclass_mobile.svg');
+    
+          @media (@sm) {
+            background-image: url('../../../../assets/graphics/health_classification/Gold_govclass.svg');
+          }
+        }
+    
+        &.gov-basic-plus {
+          background-image: url('../../../../assets/graphics/health_classification/Basicplus_govclass_mobile.svg');
+    
+          @media (@sm) {
+            background-image: url('../../../../assets/graphics/health_classification/Basicplus_govclass.svg');
+          }
+        }
+    
+        &.gov-basic {
+          background-image: url('../../../../assets/graphics/health_classification/Basic_govclass_mobile.svg');
+    
+          @media (@sm) {
+            background-image: url('../../../../assets/graphics/health_classification/Basic_govclass.svg');
+          }
+        }
       }
-    }
-
-    &.gov-bronze-plus {
-      background-image: url('/ctm/assets/graphics/health_classification/Bronzeplus_govclass_mobile.svg');
-
-      @media (@sm) {
-        background-image: url('/ctm/assets/graphics/health_classification/Bronzeplus_govclass.svg');
-      }
-    }
-
-    &.gov-bronze {
-      background-image: url('/ctm/assets/graphics/health_classification/Bronze_govclass_mobile.svg');
-
-      @media (@sm) {
-        background-image: url('/ctm/assets/graphics/health_classification/Bronze_govclass.svg');
-      }
-    }
-
-    &.gov-silver-plus {
-      background-image: url('/ctm/assets/graphics/health_classification/Silverplus_govclass_mobile.svg');
-
-      @media (@sm) {
-        background-image: url('/ctm/assets/graphics/health_classification/Silverplus_govclass.svg');
-      }
-    }
-
-    &.gov-silver {
-      background-image: url('/ctm/assets/graphics/health_classification/Silver_govclass_mobile.svg');
-
-      @media (@sm) {
-        background-image: url('/ctm/assets/graphics/health_classification/Silver_govclass.svg');
-      }
-    }
-
-    &.gov-gold {
-      background-image: url('/ctm/assets/graphics/health_classification/Gold_govclass_mobile.svg');
-
-      @media (@sm) {
-        background-image: url('/ctm/assets/graphics/health_classification/Gold_govclass.svg');
-      }
-    }
-
-    &.gov-basic-plus {
-      background-image: url('/ctm/assets/graphics/health_classification/Basicplus_govclass_mobile.svg');
-
-      @media (@sm) {
-        background-image: url('/ctm/assets/graphics/health_classification/Basicplus_govclass.svg');
-      }
-    }
-
-    &.gov-basic {
-      background-image: url('/ctm/assets/graphics/health_classification/Basic_govclass_mobile.svg');
-
-      @media (@sm) {
-        background-image: url('/ctm/assets/graphics/health_classification/Basic_govclass.svg');
-      }
-    }
-  }
-
-      
     }
 
     .lhcText {
